# mneme-hermes

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-quickstart.md  hermes-fit.md  hermes-memory-checks.md  memory-quality-layer.md  repo-wiki-updater.md  roadmap.md  vision.md
mneme_hermes/: __init__.py  cli.py
scripts/: mneme-hermes
skills/mneme-hermes/: SKILL.md
tests/: test_cli.py
